--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
             Portfólio
         </div>
         <div id="menu">
-
+            <ul>
+                <li> <a href="#">Meus Serviços</a></li>
+                <li><a href="#">Contato</a></li>
+                <li><a href="#">Portfólio</a></li>
+            </ul>
         </div>
     </div>
 </body>
