Area do clientes criada e finalizada

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
+   <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -26,7 +26,6 @@
             </ul>
         </div>
     </div>
-    
     <div class="container">
         <div id="headerCta">
             <h1>Olá, meu nome<br>
@@ -34,12 +33,29 @@
             </h1>
             <p>Sou programadora e gostaria de apresentar meu<br>
                 trabalho para você através deste portfólio.</p>
-            <a id="buttonCta" href="">Meus Serviços</a>
+          <br>
+                <a id="buttonCta" href="">Meus Serviços</a>
         </div>
 
         <div id="headerImg">
             <img src="img/header.svg">
         </div>
+    </div>
+    <div class="container" id="clients">
+<div id="headerClientText">
+    Alguns dos<br>
+    meus clientes
+</div>
+<div class="headerLogo">
+    <img src="img/apple.svg" alt="Logo Apple" srcset="">
+</div>
+<div class="headerLogo">
+    <img src="img/slack.svg" alt="Logo slack" srcset="">
+</div>
+<div class="headerLogo">
+    <img src="img/spotify.svg" alt="Logo Spotify" srcset="">
+</div>
+    </div>
 </body>
 
 </html>
