--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -31,10 +31,10 @@
             <h1>Olá, meu nome<br>
                 é Maria
             </h1>
-            <p>Sou programadora e gostaria de apresentar meu<br>
+            <p class="gray">Sou programadora e gostaria de apresentar meu<br>
                 trabalho para você através deste portfólio.</p>
-          <br>
-                <a id="buttonCta" href="">Meus Serviços</a>
+            <br>
+            <a id="buttonCta" href="">Meus Serviços</a>
         </div>
 
         <div id="headerImg">
@@ -42,19 +42,44 @@
         </div>
     </div>
     <div class="container" id="clients">
-<div id="headerClientText">
-    Alguns dos<br>
-    meus clientes
-</div>
-<div class="headerLogo">
-    <img src="img/apple.svg" alt="Logo Apple" srcset="">
-</div>
-<div class="headerLogo">
-    <img src="img/slack.svg" alt="Logo slack" srcset="">
-</div>
-<div class="headerLogo">
-    <img src="img/spotify.svg" alt="Logo Spotify" srcset="">
-</div>
+        <div id="headerClientText">
+            Alguns dos<br>
+            meus clientes
+        </div>
+        <div class="headerLogo">
+            <img src="img/apple.svg" alt="Logo Apple" srcset="">
+        </div>
+        <div class="headerLogo">
+            <img src="img/slack.svg" alt="Logo slack" srcset="">
+        </div>
+        <div class="headerLogo">
+            <img src="img/spotify.svg" alt="Logo Spotify" srcset="">
+        </div>
+    </div>
+    <div class="container">
+        <div id="services">
+            <h3 class="red">Conheça</h2>
+            <h1 class="black">Meus Serviços</h1>
+           <p id="textCta">Vou ajudar a sua empresa<br> a alcançar grandes resultados.</p>
+        </div>
+
+    </div>
+    <div class="container" id="service">
+        <div class="textCenter">
+            <img src="img/consultoria.svg" alt="Icone Consultoria">
+            <h3>Consultoria</h3>
+            <p class="gray">Te ajudo a organizar sua empresa e melhorar seus resultados.</p>
+        </div>
+        <div class="textCenter">
+            <img src="img/email.svg" alt="Icone Email">
+            <h3>Email Marketing</h3>
+            <p class="gray">Gerenciar campanhas é difícil. Conte comigo para te ajudar.</p>
+        </div>
+        <div class="textCenter">
+            <img src="img/sites.svg" alt="Icone Sites">
+            <h3>Criação de Sites</h3>
+            <p class="gray">Desenvolvo seu site inteiro do zero e te entrego prontinho.</p>
+        </div>
     </div>
 </body>
 
