retirada da seção serviços para correção, está comentada

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Seção de Chamada para Ação -->
-    <section class="container">
+    <div class="container">
         <div id="headerCta">
             <h1>Olá, meu nome<br> é Maria</h1>
             <p class="gray">Sou programadora e gostaria de apresentar meu<br> trabalho para você através deste portfólio.</p>
@@ -40,10 +40,10 @@
         <div class="headerImg">
             <img src="img/header.svg" alt="Imagem ilustrativa de cabeçalho">
         </div>
-    </section>
+    </div>
 
     <!-- Seção de Clientes -->
-    <section class="container" id="clients">
+    <div class="container" id="clients">
         <div id="headerClientText">
             Alguns dos<br> meus clientes
         </div>
@@ -56,17 +56,13 @@
         <div class="headerLogo">
             <img src="img/spotify.svg" alt="Logo Spotify">
         </div>
-    </section>
+    </div>
 
     <!-- Seção de Serviços -->
-    <section class="container" id="services">
-        <h3 class="red">Conheça</h3>
-        <h1 class="black">Meus Serviços</h1>
-        <p id="textCta">Vou ajudar a sua empresa<br> a alcançar grandes resultados.</p>
-    </section>
+
 
     <!-- Seção de Detalhes dos Serviços -->
-    <section class="container" id="service">
+    <div class="container" id="service">
         <div class="textCenter">
             <img src="img/consultoria.svg" alt="Ícone Consultoria">
             <h3>Consultoria</h3>
@@ -82,10 +78,10 @@
             <h3>Criação de Sites</h3>
             <p class="gray">Desenvolvo seu site inteiro do zero e te entrego prontinho.</p>
         </div>
-    </section>
+    </div>
 
     <!-- Seção de Contato -->
-    <section>
+    <div class="container">
         <div id="contactImg">
             <img src="img/contact.svg" alt="Imagem de contato com ilustração de um formulário">
         </div>
@@ -94,7 +90,7 @@
             <h1 class="black">Ganhe mais dinheiro</h1>
             <p class="gray">Digite aqui seu endereço de e-mail. Eu entrarei em contato para fornecer um diagnóstico gratuito.</p>
         </div>
-    </section>
+    </div>
 
 </body>
 
